# pgformat

./: .gitattributes  .gitignore  .releaserc  Justfile  README.md  dune-project  pgformat.opam
.github/workflows/: pr.yaml  release.yaml
fixture/: complex.sql  create.sql  select.sql  select_simple.sql
lib/: ast.ml  dune  lexer.mll  parser.mly  pgformatter.ml
test/: dune  helper.ml  test_pgformat.ml
